--- a/web/css/drawing.css
+++ b/web/css/drawing.css
@@ -1,3 +1,20 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    vertical-align:middle;
+}
+textarea {
+    resize: none;
+}
 body{
     background-color: #ccc;
 }
@@ -7,9 +24,7 @@ body{
 }
 
 #imagecontainer{
-    width: 100px;
-    height: 100px;
-    background-image: url(/img/transparent-background.png);
+    -webkit-box-flex: 1;
     border: 1px dashed #999;
 }
 
@@ -27,48 +42,86 @@ body{
     margin: 0;
     color: inherit;
 }
-#header{
-    height: 200px;
+
+.tool, .shape{
+    background: url(/img/all.png);
+    border:1px solid #444;
+    display: inline-block;
+    height:22px;
+    width: 22px;
 }
 
-.pencil{
-    background: url(/img/tools.png);
-    background-position: -6px -14px;
+.object_selector{
+    background-position: 0 0;
 }
 
-.filler{
-    background: url(/img/tools.png);
-    background-position: -28px -14px;
+.select_area{
+    background-position: -46px 3px;
 }
 
 .eraser{
-    background: url(/img/tools.png);
-    background-position: -7px -42px;
+
+    background-position: -96px 3px;
 }
 
-.text_input{
-    background: url(/img/tools.png);
-    background-position: -53px -14px;
+.filler{
+    background-position: -146px 3px;
+}
+
+.color_picker{
+    background-position: -196px 3px;
+}
+
+.pencil{
+    background-position: -246px 3px;
 }
 
 .line{
-    background: url(/img/shapes.png);
-    background-position: -2px -3px;
+    background-position: -296px 3px;
+}
+
+.text_input{
+    background-position: -346px 3px;
 }
 
 .rect{
-    background: url(/img/shapes.png);
-    background-position: -61px -3px;
+    background-position: -396px 3px;
 }
 
 .circle{
-    background: url(/img/shapes.png);
-    background-position: -42px -3px;
+    background-position: -446px 3px;
 }
 
-.arrow_line{
-    background: url(/img/shapes.png);
-    background-position: 62px -23px;
+.brush{
+    background-position: -496px 3px;
+}
+
+.increase{
+    background-position: 3px -45px;
+}
+
+.decrease{
+    background-position: -45px -45px;
+}
+
+.close{
+    background-position: -95px -45px;
+}
+
+.magic_wand{
+    background-position: -145px -45px;
+}
+
+.blur{
+    background-position: -195px -45px;
+}
+
+.sharpen{
+    background-position: -245px -45px;
+}
+
+.clone_object{
+    background-position: -295px -45px;
 }
 
 .rotate{
@@ -77,14 +130,14 @@ body{
 }
 
 #header {
-    height: 86px;
+    width: 100px;
+    height: 100%;
     border: 1px solid #ccc;
     border-radius: 2px;
     background-color: #f5f6f7;
 }
 #header >div >div{
     float: left;
-    padding: 3px;
 }
 #header >div >div:hover{
     background-color: #f1f2f3;
