--- a/web/css/drawing.css
+++ b/web/css/drawing.css
@@ -26,6 +26,8 @@ body{
 #container{
     position: relative;
     border: 1px dashed #999;
+    border-width: 0 1px 1px 0;
+    padding: 0 2px 2px 0;
 }
 
 #layerContainer{
