--- a/web/templates/layerlist.html
+++ b/web/templates/layerlist.html
@@ -1,9 +1,11 @@
 <div
     ng-class="{selected: drawing.layerManager.isSelected(layer)}"
-    ng-click="drawing.layerManager.selectLayer(layer)" 
+    ng-click="drawing.layerManager.selectLayer(layer)"
+    class="layer"
     ng-repeat="layer in drawing.layerManager.layerList">
     <span class="nowrap">{{layer.name}}</span>
     <span
+    	ng-hide="layer.closable == false"
     	class="close circle" 
     	ng-click="drawing.layerManager.remove(layer)">x</span>
 </div>
