--- a/web/templates/tooloptions/line.html
+++ b/web/templates/tooloptions/line.html
@@ -1,8 +1,12 @@
-<div
-	style="width: 200px;">
-	<input 
-		type="number"
-		class="input-micro" 
-		ng-model="drawing.currentTool.borderWidth"
-		ng-change="drawing.currentTool.onChange()"/>
-</div>
+<li>
+	<label
+		style="width: 200px;">
+		<span> Stroke Width </span>
+		<input 
+			type="number"
+			class="input-micro" 
+			ng-model="strokewidth"
+			ng-init="strokewidth=tool.strokeWidth"
+			ng-change="tool.setStrokeWidth(strokewidth)"/>
+	</label>
+</li>
