added left right arrow in line

--- a/web/templates/tooloptions/line.html
+++ b/web/templates/tooloptions/line.html
@@ -1,12 +1,36 @@
 <li>
-	<label
-		style="width: 200px;">
-		<span> Stroke Width </span>
-		<input 
-			type="number"
-			class="input-micro" 
-			ng-model="strokewidth"
-			ng-init="strokewidth=tool.strokeWidth"
-			ng-change="tool.setStrokeWidth(strokewidth)"/>
-	</label>
+	<a href="#">
+		<label
+			style="width: 200px;">
+			<span> Stroke Width </span>
+			<input 
+				type="number"
+				class="input-micro" 
+				ng-model="strokewidth"
+				ng-init="strokewidth=tool.strokeWidth"
+				ng-change="tool.setStrokeWidth(strokewidth)"/>
+		</label>
+	</a>
+</li>
+<li>
+	<a href="#">
+		<label>
+			<span>Left Arrow</span>
+			<input  
+				type='checkbox'
+				ng-model="lineleftarrow"
+				ng-change="tool.enableLeftArrow(lineleftarrow)" />
+		</label>
+	</a>
+</li>
+<li>
+	<a href="#">
+		<label>
+			<span>Right Arrow</span>
+			<input 
+				type='checkbox'
+				ng-model="linerightarrow"
+				ng-change="tool.enableRightArrow(linerightarrow)" />
+		</label>
+	</a>
 </li>
