--- a/web/templates/nav.html
+++ b/web/templates/nav.html
@@ -1,60 +1,59 @@
- <div class="container-fluid">            
+ <div 
+    class="container-fluid">            
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Paint</a>
+    <div 
+        class="navbar-header">
+        <a 
+            class="navbar-brand" href="#">
+            Paint
+        </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">File</a>
-            <ul class="dropdown-menu" role="menu">
-                <li class="head">
-                    <a  href="#" ng-click="drawing.layerManager.addLayer()">Add Layer</a>
-                    <label add-image>
-                        + add image
-                        <input 
-                            class="add-image"
-                            type="file">
-                    </label>
-                </li>
-            </ul>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-        <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+    <div 
+        class="collapse navbar-collapse" 
+        id="bs-example-navbar-collapse-1">
+        
+        <ul 
+            class="nav navbar-nav">
+            <li 
+                ng-include="'/templates/dropdowns/file.html'"
+                class="dropdown">
+                
+            </li>
+            <li 
+                ng-include="'/templates/dropdowns/edit.html'"
+                class="dropdown">
+            </li>
+            <li 
+                ng-include="'/templates/dropdowns/image.html'"
+                class="dropdown">
+            </li>
+            <li 
+                ng-include="'/templates/dropdowns/layer.html'"
+                class="dropdown">
+            </li>
+            <li 
+                class="dropdown">
+                
+                <a 
+                    href="#" 
+                    class="dropdown-toggle" 
+                    data-toggle="dropdown">
+                    Dropdown 
+
+                    <span 
+                        class="caret">
+                    </span>
+                </a>
                 <ul 
                     ng-click="$event.stopPropagation();"
                     class="dropdown-menu" 
                     role="menu"
                     onload="tool=drawing.currentTool"
-                            ng-include="drawing.currentTool.template">
-                  </ul>
-        </li>
-        <li class="dropdown pull-right">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
+                    ng-include="drawing.currentTool.template">
+                </ul>
+            </li>
+        </ul>
     </div><!-- /.navbar-collapse -->
 </div>
