--- a/web/templates/tooloptions/line.html
+++ b/web/templates/tooloptions/line.html
@@ -1,19 +1,17 @@
-<li>
-
-	<label
-		style="width: 200px;">
-		<span> Stroke Width </span>
+<li
+	ng-controller="toolActionController">
+	<label>
+		<span style="width: 150px;display: inline-block;" > Stroke Width </span>
 		<input 
 			type="number"
 			class="input-micro" 
 			ng-model="strokewidth"
-			ng-init="strokewidth=tool.strokeWidth"
 			ng-change="tool.setStrokeWidth(strokewidth)"/>
 	</label>
 </li>
 <li>
 	<label>
-		<span>Left Arrow</span>
+		<span style="width: 150px;display: inline-block;">Start Arrow</span>
 		<input  
 			type='checkbox'
 			ng-model="lineleftarrow"
@@ -22,7 +20,7 @@
 </li>
 <li>
 	<label>
-		<span>Right Arrow</span>
+		<span style="width: 150px;display: inline-block;" >End Arrow</span>
 		<input 
 			type='checkbox'
 			ng-model="linerightarrow"
